# WordPacks

./: .gitignore  .replit  WordPacks.db  WordPacks.db-journal  discord_token.env  discordwordpacks.py  integration_discord.py  keep_alive.py  list_fr.txt  main.py  pyproject.toml  replit_keep_alive.py  restarter.py
unused files/: echanger mot.py
